# openedx-platform

./: .gitignore  CHANGELOG.md  NOTICE  package-lock.json
.cursor/rules/: architecture.mdc  changelog-and-commits.mdc  openedx-tutor-robbo.mdc  openedx-tutor-scope.mdc
.github/: pull_request_template.md
.github/workflows/: unit-tests.yml
cms/: urls.py
cms/djangoapps/contentstore/: courseware_index.py  helpers.py  models.py  tasks.py  toggles.py  utils.py
cms/djangoapps/modulestore_migrator/: tasks.py
cms/envs/: common.py
common/djangoapps/course_modes/: admin.py
common/djangoapps/third_party_auth/: apps.py  models.py  (+4 more)
docs/decisions/: 0033-standardize-filter-sort-using-django-filter.rst  0034-unify-auth-oauth2-dot-v2.rst
lms/: urls.py
lms/envs/: common.py  production.py  test.py
lms/lib/: utils.py
lms/templates/: index_overlay.html  logout.html  main.html
openedx/envs/: common.py
requirements/: common_constraints.txt  constraints.txt
requirements/edx/: base.txt  development.txt  doc.txt  testing.txt
scripts/: send_robbo_ace_transactional_samples.py
themes/robbo-theme/: README.rst  mfe-brand-tokens.yaml
tutor-plugin-robbo-mfe-branding/: README.md  pyproject.toml
tutor-plugin-robbo-mfe-branding/docs/: PRODUCTION.md
tutor-plugin-robbo-mfe-branding/tutor_plugin_robbo_mfe_branding/: __init__.py
tutor-plugin-robbo-mfe-branding/tutor_plugin_robbo_mfe_branding/templates/: robbo-mfe-shell.css
xmodule/: capa_block.py  html_block.py  library_content_block.py  lti_block.py  raw_block.py  split_test_block.py  x_module.py  xml_block.py
(+236 files in other folders)
